# rocHPL

./: CMakeLists.txt  install.sh
cmake/: Dependencies.cmake  host-arch.cmake
include/: hpl.hpp  hpl_auxil.hpp  hpl_blas.hpp  hpl_comm.hpp  hpl_events.hpp  hpl_exceptions.hpp  hpl_grid.hpp  hpl_hip.hpp  hpl_host.hpp  hpl_misc.hpp  hpl_panel.hpp  hpl_pauxil.hpp  hpl_pfact.hpp  hpl_pgesv.hpp  hpl_pgesv_types.hpp  hpl_pmat.hpp  hpl_pmatgen.hpp  hpl_pmisc.hpp  hpl_ptest.hpp
scripts/: convert-to-cuda.sh  run_rochpl.in
src/: HPL_InitGPU.cpp  HPL_pddriver.cpp  HPL_pdinfo.cpp  HPL_pdtest.cpp
src/auxil/: HPL_abort.cpp  HPL_dlange.cpp  HPL_dlatcpy_device.cpp  HPL_fprintf.cpp  HPL_memory.cpp  HPL_warn.cpp
src/blas/: HPL_daxpy.cpp  HPL_dgemm.cpp  HPL_dgemv.cpp  HPL_dger.cpp  HPL_dscal.cpp  HPL_dtrsm.cpp  HPL_idamax.cpp
src/comm/: HPL_all_reduce_dmxswp.cpp  HPL_allgatherv.cpp  HPL_bcast.cpp  HPL_bcast_1rinM.cpp  HPL_bcast_1ring.cpp  HPL_bcast_1ring_sync.cpp  HPL_bcast_2rinM.cpp  HPL_bcast_2ring.cpp  HPL_blockcyclic_gather.cpp  HPL_scatterv.cpp
src/grid/: HPL_grid_info.cpp  HPL_grid_init.cpp
src/matgen/: HPL_copy_2D_to_array_device.cpp  HPL_copy_device.cpp  HPL_pdmatgen.cpp  HPL_pdrandmat_device.cpp  HPL_pdreadmat.cpp  HPL_split_blocks.cpp
src/panel/: HPL_panel_helpers.cpp  HPL_pdpanel_SendToDevice.cpp  HPL_pdpanel_SendToHost.cpp  HPL_pdpanel_bcast.cpp  HPL_pdpanel_disp.cpp  HPL_pdpanel_free.cpp  HPL_pdpanel_init.cpp  HPL_pdpanel_new.cpp  HPL_pdpanel_wait.cpp
src/pauxil/: HPL_dlaswp00N_device.cpp  HPL_dlaswp01T_device.cpp  HPL_dlaswp02T_device.cpp  HPL_dlaswp03T_device.cpp  HPL_dlaswp04T_device.cpp  HPL_dlaswp10N_device.cpp  HPL_infog2l.cpp  HPL_pabort.cpp  HPL_pdlange_device.cpp  HPL_pwarn.cpp
src/pfact/: HPL_dlocswpN.cpp  HPL_pdfact.cpp  HPL_pdmxswp.cpp  HPL_pdpancrN.cpp  HPL_pdpancrT.cpp  HPL_pdpanllN.cpp  HPL_pdpanllT.cpp  HPL_pdpanrlN.cpp  HPL_pdpanrlT.cpp  HPL_pdrpancrN.cpp  HPL_pdrpancrT.cpp  HPL_pdrpanllN.cpp  HPL_pdrpanllT.cpp  HPL_pdrpanrlN.cpp  HPL_pdrpanrlT.cpp
src/pgesv/: HPL_pdgesv.cpp  HPL_pdlaswp.cpp  HPL_pdtrsv_device.cpp  HPL_pdupdateNT.cpp  HPL_pdupdateTT.cpp
test/: CMakeLists.txt  test_grid.cpp  test_utils.cpp  test_utils.hpp
test/blas/: CMakeLists.txt  trsm.cpp
test/gather/: CMakeLists.txt  desc.txt  gather_matrix.cpp  gather_matrix.hpp  gen.py  test_gather.cpp
test/matgen/: CMakeLists.txt  HPL_dmatgen.cpp  HPL_jumpit.cpp  HPL_ladd.cpp  HPL_lmul.cpp  HPL_pdmatgen.cpp  HPL_rand.cpp  HPL_setran.cpp  HPL_xjumpm.cpp  alloc.hpp  host_panel.cpp  matgen.hpp  matrix.hpp  panel.hpp
test/pfact/: CMakeLists.txt  pfact_dist.cpp  pfact_dist.hpp  pfact_shared.cpp
test/utils/: CMakeLists.txt  error_handling.hpp  test_config.cpp  test_config.hpp  test_utils.cpp  test_utils.hpp
